# test-reservation-system

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  test-backend.yml  test-be.yml  test-docker-compose.yml
app/: main.py
backend/: Dockerfile  pyproject.toml  tests_pre_start.py
backend/app/: crud.py  dependencies.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0448d11d4640_add_status_rejected.py  1551c17641e7_fix_status_type.py  1a31ce608336_add_cascade_delete_relationships.py  1a8e1033b0c1_tryout_add_name.py  31996634dc94_initial_migration.py  35db9c219f12_canceld_deleted.py  3858cfe56351_delete_item.py  5f29481ef304_add_column_last_name_to_user_model.py  610ed047b701_rename_exam_to_tryout.py  61b596c53aed_delete_table.py  86a514cfd1fe_add_registration_start_time_and_end_.py  94c5da5a58b4_fix_fk_type_for_user_id.py  efbe3a73f1af_add_end_time_for_slot.py
backend/app/api/: main.py
backend/app/core/: config.py  db.py  error_handler.py  exceptions.py  security.py  transaction.py
backend/app/crud/: users.py
backend/app/models/: common.py  exams.py  reservations.py  tryouts.py  users.py
backend/app/repository/: exams.py  reservations.py  tryouts.py  users.py
backend/app/routers/: main.py  reservations.py  tryouts.py  utils.py
backend/app/schemas/: users.py
backend/app/services/: reservations.py  tryouts.py  users.py
backend/app/tests/: conftest.py
backend/app/tests/reservations/: test_reservation.py
backend/app/tests/routers/: test_reservation.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/app/tests/services/: test_reservation.py
backend/app/tests/tryouts/: test_tryout.py
backend/doc/: README.md  Retrospective.md
backend/scripts/: prestart.sh
