[tool.poetry]
name = "test-reservation-system"
version = "0.1.0"
description = "시험 예약 시스템"
authors = ["남기범 <gogot1103@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"  
python-dotenv = "^1.0.1"  
psycopg2-binary = "^2.9.9" 

[tool.poetry.group.lint.dependencies]
ruff = "^0.11.0"  
black = "^25.1.0" 
mypy = "^1.15.0"  
pre-commit = "^3.7.0" 

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90"]
ignore = ["E203", "E266", "E501", "W503"]

[tool.mypy]
strict = true
ignore_missing_imports = true